--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,5 +1,5 @@
 <div class="navigation">
-                <a class="nav-itemlogo" href="{{ '/home/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
+                <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
                 <a class="nav-item" href="{{ '/over-ons/' | url }}">Over ons</a>
                 <a class="nav-item" href="{{ '/opleiding/' | url }}">Opleiding</a>
                 <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
