--- a/src/_pages/home.liquid
+++ b/src/_pages/home.liquid
@@ -12,7 +12,7 @@ permalink: index.html
 
 <div class="posts__section">
     <div class="cases__square">
-        <h2>Cases</h2>
+        <h2>Posts</h2>
         <a class="more-info" href="/cases" data-navigo>Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
     </div>
     <div class="slider">
@@ -59,7 +59,34 @@ permalink: index.html
     </div>
 </div>
 
-<div class="cases__section">
+<div class="m-cases__section">
+
+</div>
+
+<div class="m-info__section">
+    <div class="a-info__first">
+        <div class="a-info__title">
+            <h3>Waarom arteveldehogeschool?</h3>
+        </div>
+        <div class="a-info__text">
+            <p>Keuze uit ruim opleidingsaanbod, uitstekende begeleiding op maat en studeren in de grootste studentenstad van Vlaanderen.</p>
+            <div class="a-info__readmore">
+                <a href="https://pgm.gent/info">Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="a-info__second">
+        <div class="a-info__title">
+            <h3>Ontdek je opleidingsprogramma</h3>
+        </div>
+        <div class="a-info__text">
+            <p>Hier vind je het volledige studieprogramma voor het Graduaat Programmeren - Front-end web development, met meer info over elk vak van deze opleiding.</p>
+            <div class="a-info__readmore">
+                <a href="https://pgm.gent/info">Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+        </div>
+        
+    </div>
 
 </div>
 
