--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -19,9 +19,10 @@
 @import 'layout/grid';
 
 // pages
-@import 'pages/about';
 @import 'pages/home';
+@import 'pages/about';
 @import 'pages/posts';
+@import 'pages/opleiding';
 
 // themes
 @import 'themes/admin';
