--- a/src/_sass/layout/_footer.scss
+++ b/src/_sass/layout/_footer.scss
@@ -26,6 +26,7 @@ footer {
         font-size: var(--font-size-subtitle);
         margin-left: calc(var(--gutter)*1);
         z-index: 999;
+        letter-spacing: 2px;
     }
     .footer_navigation {
         margin-left: 100px;
