--- a/src/_sass/pages/_opleiding.scss
+++ b/src/_sass/pages/_opleiding.scss
@@ -6,6 +6,7 @@
 .o-opleiding__page {
     display: flex;
     font-family: 'Open Sans', sans-serif;
+    min-width: 100vh;
     #buttonsForFiltering {
         background-color: var(--color--darkblue);
         padding-top: 25px;
@@ -51,8 +52,9 @@
     border: 1px solid gray;
     padding-left: 100px;
     padding-right: 100px;
-    box-shadow: 10px 10px 52px -14px rgba(0,0,0,0.75);
     padding-top: 50px;
+    padding: 50px 100px 50px 100px;
+    box-shadow: 10px 10px 52px -14px rgba(0,0,0,0.75);
     margin-top: calc(var(--gutter)*4);
     margin-bottom: calc(var(--gutter)*4);
 }
