--- a/src/_sass/pages/_posts.scss
+++ b/src/_sass/pages/_posts.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: nowrap;
     padding: 50px;
-
+    justify-content: center;
     .m-post {
         width: 350px;
         height: 320px;
