--- a/src/_pages/students.liquid
+++ b/src/_pages/students.liquid
@@ -9,8 +9,12 @@ permalink: studenten/index.html
     <h1 class="title__head">Studenten</h1>
 </div>
 
-<div id="students"></div>
+<div class="container">
+    <div class="g-fb-row" id="students">
+        <div id="o-student__image"></div>
+
+    </div>
+</div>
 
 
 <script src="{{ '/static/js/students.js' | url }}"></script>
-
