--- a/src/_pages/cases.liquid
+++ b/src/_pages/cases.liquid
@@ -8,3 +8,10 @@ permalink: cases/index.html
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <h1 class="title__head">Cases</h1>
 </div>
+
+<div id="cases">
+ <!--Imported with JavaScript-->
+</div>
+
+<script src="{{ '/static/js/cases.js' | url }}"> </script>
+
