--- a/src/_pages/opleiding.liquid
+++ b/src/_pages/opleiding.liquid
@@ -13,7 +13,8 @@ permalink: opleiding/index.html
 <div class="o-opleiding__page">
     <!-- Control buttons -->
     <div id="buttonsForFiltering">
-        <button class="btn active" onclick="filterSelection('section1')">- Wat zal je leren?</button>
+        <button class="btn active" onclick="filterSelection('section0')">- Introductie</button>
+        <button class="btn " onclick="filterSelection('section1')">- Wat zal je leren?</button>
         <button class="btn" onclick="filterSelection('section2')">- Ontdek je opleidingsprogramma</button>
         <button class="btn" onclick="filterSelection('section3')">- Verkort traject en vrijstellingen
         </button>
@@ -25,6 +26,10 @@ permalink: opleiding/index.html
     </div>
 
     <div class="container">
+        <div class="filterDiv section0">
+        <h4>Introductie</h4>
+        <iframe width="750" height="543" src="https://www.youtube.com/embed/oZE6MQnM0cQ" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <div class="filterDiv section1">
 
             <h4>Wat zal je leren?</h4>
