--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,6 +1,7 @@
 <div class="navigation">
                 <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
                 <a class="nav-item" href="{{ '/opleiding/' | url }}">Opleiding</a>
+                <a class="nav-item" href="{{ '/team/' | url }}">Team</a>
                 <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
                 <a class="nav-item" href="{{ '/posts/' | url }}">Posts</a>
                 <a class="nav-item" href="{{ '/contact/' | url }}">Contact</a>
