--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -1,7 +1,7 @@
 ---
-title: studenten
+title: team
 layout: page
-permalink: studenten/index.html
+permalink: team/index.html
 ---
 
 <div class="title__section">
@@ -9,12 +9,15 @@ permalink: studenten/index.html
     <h1 class="title__head">Studenten</h1>
 </div>
 
-<div class="container">
+<div class="g-fb-container">
     <div class="g-fb-row" id="students">
-        <div id="o-student__image"></div>
 
+    </div>
+    <div class="g-fb-row" id="team">
+    
     </div>
 </div>
 
 
 <script src="{{ '/static/js/students.js' | url }}"></script>
+<script src="{{ '/static/js/team.js' | url }}"></script>
