--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -22,7 +22,7 @@
 @import 'pages/home';
 @import 'pages/posts';
 @import 'pages/opleiding';
-@import 'pages/students';
+@import 'pages/team';
 
 // themes
 @import 'themes/admin';
