--- a/src/_sass/pages/_team.scss
+++ b/src/_sass/pages/_team.scss
@@ -2,6 +2,8 @@
     position: relative;
     margin: 0 auto;
     width: fit-content;
+    margin-top: calc(var(--gutter)*3);
+    align-items: center;
     .a-student__content {
         width: 300px;
         text-align: center;
@@ -14,21 +16,26 @@
         }
 
         .o-student__image {
-            position: absolute;
             border-radius: 500px;
+            position: absolute;
             border: 2px solid var(--color--pinkish);
             width: 150px;
             height: 150px;
+            margin-top: -80px;
+            margin-left: 63px;
         }
 
         .o-student__name {
             color: var(--color--whitish);
             background-color: var(--color--darkblue);
-            width: 300px;
             font-family: 'futuristic armour';
             font-size: 25px;
             padding: 30px;
+            padding-top: calc(var(--gutter)*2.4);
+            line-height: 10px;
             border-radius: 15px;
+            width: 280px;
+            height: 180px;
         }
     }
 }
