--- a/src/_pages/home.liquid
+++ b/src/_pages/home.liquid
@@ -13,7 +13,7 @@ permalink: index.html
 <div class="posts__section">
     <div class="cases__square">
         <h2>Posts</h2>
-        <a class="more-info" href="/cases" data-navigo>Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
+        <a class="more-info" href="{{ '/posts/' | url }}" data-navigo>Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
     </div>
     <div class="slider">
         <div class="slidercontent">
