--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -20,3 +20,4 @@ permalink: team/index.html
 
 
 <script src="{{ '/static/js/students.js' | url }}"></script>
+<script src="{{ '/static/js/team.js' | url }}"></script>
