--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -10,12 +10,19 @@ permalink: team/index.html
 </div>
 
 <div class="g-fb-container">
+    <div class="students__title">
+        <h3>Studenten</h3>
+    </div>
     <div class="g-fb-row" id="students">
 
+    </div>
+    <div class="teams__title">
+        <h3>Artevelde team</h3>
     </div>
     <div class="g-fb-row" id="team">
     
     </div>
+    
 </div>
 
 
