--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -16,7 +16,7 @@ permalink: team/index.html
     <div class="g-fb-row" id="students">
 
     </div>
-    <div class="teams__title">
+    <div class="students__title">
         <h3>Artevelde team</h3>
     </div>
     <div class="g-fb-row" id="team">
