--- a/src/_pages/team/detail-team.liquid
+++ b/src/_pages/team/detail-team.liquid
@@ -1,12 +1,12 @@
 ---
-title: students
+title: team
 layout: page
-permalink: students/students/index.html
+permalink: team/detail-team/index.html
 ---
 
 <div class="title__section">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
-    <div id="detailpage"></div>
+    <div class="detailpage-team"></div>
 </div>
 
 <script src="{{ '/static/js/detail-student.js' | url }}"></script>
