--- a/src/_pages/team/detail-team.liquid
+++ b/src/_pages/team/detail-team.liquid
@@ -9,4 +9,4 @@ permalink: team/detail-team/index.html
     <div class="detailpage-team"></div>
 </div>
 
-<script src="{{ '/static/js/detail-student.js' | url }}"></script>
+<script src="{{ '/static/js/detail-team.js' | url }}"></script>
