--- a/src/_pages/contact.liquid
+++ b/src/_pages/contact.liquid
@@ -8,3 +8,7 @@ permalink: contact/index.html
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <h1 class="title__head">Contact</h1>
 </div>
+
+<div class="m-contact__page">
+
+</div>
