--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -23,6 +23,7 @@
 @import 'pages/posts';
 @import 'pages/opleiding';
 @import 'pages/team';
+@import 'pages/cases';
 
 // themes
 @import 'themes/admin';
