--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -6,7 +6,7 @@ permalink: team/index.html
 
 <div class="title__section">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
-    <h1 class="title__head">Studenten</h1>
+    <h1 class="title__head">Team</h1>
 </div>
 
 <div class="g-fb-container">
