--- a/src/_sass/pages/_team.scss
+++ b/src/_sass/pages/_team.scss
@@ -39,3 +39,11 @@
         }
     }
 }
+
+#team {
+    p {
+        margin-top: var(--spacer);
+        line-height: 20px;
+        text-align: center;
+    }
+}
