--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -49,6 +49,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
     <script src="https://kit.fontawesome.com/8a1b33090c.js" crossorigin="anonymous"></script>
     <script type="module" src="{{ '/static/js/app.js' | url }}"></script>
+    <script type="module" src="{{ '/static/js/mobile_nav.js' | url }}"></script>
     <script src="{{ '/static/js/mapbox.js' | url }}"></script>
 </body>
 </html>
