--- a/src/_pages/students/students.liquid
+++ b/src/_pages/students/students.liquid
@@ -6,7 +6,7 @@ permalink: students/students/index.html
 
 <div class="title__section">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
-    <div id="detailpage"></div>
+    <div id="detailpage-students"></div>
 </div>
 
 <script src="{{ '/static/js/detail-student.js' | url }}"></script>
