--- a/src/_pages/team.liquid
+++ b/src/_pages/team.liquid
@@ -10,14 +10,14 @@ permalink: team/index.html
 </div>
 
 <div class="g-fb-container">
-    <div class="students__title">
-        <h3>Studenten</h3>
+    <div class="team__title">
+        <h2>Studenten</h2>
     </div>
     <div class="g-fb-row" id="students">
 
     </div>
-    <div class="students__title">
-        <h3>Artevelde team</h3>
+    <div class="team__title">
+        <h2>Artevelde team</h2>
     </div>
     <div class="g-fb-row" id="team">
     
