--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -12,6 +12,7 @@
 // components
 @import 'components/buttons';
 @import 'components/slider';
+@import 'components/mobile-nav';
 
 // layout
 @import 'layout/footer';
