--- a/src/_sass/pages/_home.scss
+++ b/src/_sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .title__section {
     height: calc(100vh - 80px);
     text-align: center;
-    z-index: 9999;
+    z-index: -99999;
     .title__head {
         font-family: var(--futur-font);
         font-size: var(--font-size-title);
@@ -34,11 +34,11 @@
     h2 {
         font-size: var(--font-size-subtitle);
         font-family: var(--futur-font);
-        padding: 15px;
+        padding: var(--spacer16);
     }
     a {
         margin-top: 40px;
-        margin-left: 15px;
+        margin-left: var(--spacer16);
         font-size: var(--font-size-normal);
     }
     i {
@@ -48,7 +48,7 @@
 
 .main-image {
     margin-top: -80px;
-    z-index: -1;
+    z-index: -99999;
     height: calc(100vh + 80px);
     width: 100vw;
     position: absolute;
