--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -3,7 +3,7 @@
         <div class="footer__content">
         <p>Contact</p>
 <div class="g-fb-container">
-    <div class="g-fb-row">
+    <div class="g-fb-row footer__items">
         <div class="g-fb-col-4">
             <div class="mapbox">
                 <div class="map_detail">
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </div>
-<div class="g-fb-col-4">
+<div class="g-fb-col-4 footer_navigation__field">
     <div class="footer__lists">
         <ul class="footer_navigation">
             <li class="footer__title">Navigatie</li>
