--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,4 +1,7 @@
 <div class="navigation">
+                <div class="header__logo">
+                    <img src="{{ '/static/images/logo.png' | url }}" alt="PGM logo">
+                </div>
                 <div class="desktop-nav">
                     <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
                     <a class="nav-item" href="{{ '/opleiding/' | url }}">Opleiding</a>
@@ -6,8 +9,8 @@
                     <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
                     <a class="nav-item" href="{{ '/posts/' | url }}">Posts</a>
                 </div>
-                <button class="btn-toggle">
-                
+                <button class="btn-toggle" id="icon">
+                    <div class="hamburger"></div>
                 </button>
                 <div class="mobile-nav">
                     <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
@@ -15,5 +18,6 @@
                     <a class="nav-item" href="{{ '/team/' | url }}">Team</a>
                     <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
                     <a class="nav-item" href="{{ '/posts/' | url }}">Posts</a>
+                    <p class="copyright">Copyright © 2020 Graduaat Programmeren</p>
                 </div>
 </div>
