--- a/src/_pages/home.liquid
+++ b/src/_pages/home.liquid
@@ -61,6 +61,30 @@ permalink: index.html
 
 <div class="m-technology__section">
 
+<span class="technology__item">
+Javascript
+</span>
+
+<span class="technology__item">
+HTML5
+</span>
+
+<span class="technology__item">
+CSS3
+</span>
+
+<span class="technology__item">
+SASS
+</span>
+
+<span class="technology__item">
+GITHUB
+</span>
+
+<span class="technology__item">
+
+</span>
+
 </div>
 
 <div class="m-info__section">
