--- a/src/_sass/layout/_header.scss
+++ b/src/_sass/layout/_header.scss
@@ -56,13 +56,26 @@ body {
 
 .nav-logo {
     width: 120px;
-    margin-left: 30px;
 }
 
 .mobile-nav {
     display: none;
     z-index: 99999;
 }
+
+.mobile-nav.nav-show {
+    background-color: var(--color--darkblue);
+}
+
+.header__logo {
+    display: none;
+}
+
+.copyright {
+    color: var(--color--whitish);
+    margin-top: calc(var(--gutter)*8);
+}
+
 
 @media only screen and (max-width: 500px) {
     .mobile-nav {
@@ -79,19 +92,26 @@ body {
         padding-top: 15px;
         z-index: 9999999;
         position: fixed;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         z-index: -1;
-        background-color: var(--color-darkblue);
+        background-color: var(--color--darkblue);
         line-height: 2;
         flex-direction: column;
         border: none;
-        margin: 0 auto;
         text-align: center;
+        margin-top: -20px;
+        margin-left: -8px;
         .nav_logo {
             margin-left: -13px;
         }
       }
+      .header__logo img {
+        display: block;
+        position: absolute;
+        width: 200px;
+        z-index: -1;
+    }
 }
 
 @media (max-width: 1200px) {
