--- a/src/_sass/pages/_team.scss
+++ b/src/_sass/pages/_team.scss
@@ -55,3 +55,9 @@
     margin-left: calc(var(--gutter)*4);
     font-family: var(--futur-font);
 }
+
+@media only screen and(max-width: 400px) {
+    .a-student__content {
+        margin-left: -200px;
+    }
+}
