--- a/src/_pages/opleiding.liquid
+++ b/src/_pages/opleiding.liquid
@@ -26,11 +26,11 @@ permalink: opleiding/index.html
     </div>
 
     <div class="container">
-        <div class="filterDiv section0">
+        <div class="filterDiv section0 opleidings__page">
         <h4>Introductie</h4>
         <iframe width="750" height="543" src="https://www.youtube.com/embed/oZE6MQnM0cQ" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="filterDiv section1">
+        <div class="filterDiv section1 opleidings__page">
 
             <h4>Wat zal je leren?</h4>
 
@@ -69,7 +69,7 @@ permalink: opleiding/index.html
                     ervaar je hoe het voelt om echt in team te werken. Tijdens een individueel afsluitend project dat je
                     op de werkvloer uitvoert, verdiep je je bovendien in een onderwerp naar keuze.</p>
         </div>
-        <div class="filterDiv section2">
+        <div class="filterDiv section2 opleidings__page">
 
             <h4>Ontdek je opleidingsprogramma</h4>
 
@@ -93,7 +93,7 @@ permalink: opleiding/index.html
             <a href="{{ '/static/assets/pgm_curriculum_2122.pdf' | url}}" download>Downloaden</a>
             <iframe src="{{ '/static/assets/pgm_curriculum_2122.pdf' | url}}" width="100%" height="500px"></iframe>
         </div>
-        <div class="filterDiv section3">
+        <div class="filterDiv section3 opleidings__page">
 
             <h2>Verkort traject en vrijstellingen</h2>
             <h4>Gespreid traject</h4>
@@ -115,7 +115,7 @@ permalink: opleiding/index.html
             </p>
 
         </div>
-        <div class="filterDiv section4">
+        <div class="filterDiv section4 opleidings__page">
 
             <h4>Waarom dit graduaat?</h4>
             <h4>Een graduaatsopleiding?</h4>
@@ -169,7 +169,7 @@ permalink: opleiding/index.html
 
             <p>Dat kan na je graduaatsopleiding via een verkort traject (minstens 90 studiepunten of 1,5 jaar).</p>
         </div>
-        <div class="filterDiv section5">
+        <div class="filterDiv section5 opleidings__page">
 
             <h4>Wat na je opleiding?</h4>
             <h4>Veel opties</h4>
@@ -219,7 +219,7 @@ permalink: opleiding/index.html
             <p>Check ook <a href="www.hogeronderwijsregister.be">www.hogeronderwijsregister.be</a> en <a
                     href="www.onderwijskiezer.be">www.onderwijskiezer.be</a> voor mogelijkheden in heel Vlaanderen.</p>
         </div>
-        <div class="filterDiv section6">
+        <div class="filterDiv section6 opleidings__page">
 
             <h4>Waar volg je les?</h4>
 
@@ -244,7 +244,7 @@ permalink: opleiding/index.html
 
             <p>Op de campus is ook een ruime parkeergelegenheid en een ruime, overdekte fietsstalling.</p>
         </div>
-        <div class="filterDiv section7">
+        <div class="filterDiv section7 opleidings__page">
             <h4>Praktische info en veel gestelde vragen.</h4>
             <iframe width="686" height="386" src="https://www.youtube.com/embed/DG1jVe9l1FM" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -440,7 +440,7 @@ permalink: opleiding/index.html
                     href="https://www.arteveldehogeschool.be/sites/default/files/pdf/wistjedatjes_pgm.pdf"><span>enkele
                         weetjes met betrekking tot de opleiding en een voorbeelduurrooster.</span></a></h4>
         </div>
-        <div class="filterDiv section8">
+        <div class="filterDiv section8 opleidings__page">
 
             <h4>Persoonlijke begeleiding</h4>
             <h5>Unieke aanpak in Graduaat Programmeren</h5>
@@ -470,4 +470,4 @@ permalink: opleiding/index.html
         </div>
     </div>
 </div>
-<script src="{{ '/static/js/aboutus.js' | url }}"> </script>
+<script src="{{ '/static/js/filter.js' | url }}"> </script>
