--- a/src/_sass/pages/_posts.scss
+++ b/src/_sass/pages/_posts.scss
@@ -1,7 +1,7 @@
 #posts {
     display: flex;
-    flex-wrap: nowrap;
-    padding: 50px;
+    flex-wrap: wrap;
+    padding: 30px;
     justify-content: center;
     .m-post {
         width: 350px;
@@ -53,5 +53,13 @@
             opacity: 1;
             background-color: var(--color--pinkish);
         }
+    }
+}
+
+@media only screen and(max-width: 500px) {
+    #posts {
+        flex-direction: column;
+        padding: 0;
+        margin: -13px;
     }
 }
