--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -5,9 +5,15 @@
                 <div class="desktop-nav">
                     <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
                     <a class="nav-item" href="{{ '/opleiding/' | url }}">Opleiding</a>
+                    <a class="nav-item" href="{{ '/werkplekleren/' | url }}">Werkplekleren</a>
                     <a class="nav-item" href="{{ '/team/' | url }}">Team</a>
                     <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
                     <a class="nav-item" href="{{ '/posts/' | url }}">Posts</a>
+                    <div class="social">
+                        <a href="https://www.facebook.com/GraduaatProgrammeren.Arteveldehogeschool" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.linkedin.com/company/graduaat-programmeren/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/madebypgm/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    </div>
                 </div>
                 <button class="btn-toggle" id="icon">
                     <div class="hamburger"></div>
@@ -15,9 +21,15 @@
                 <div class="mobile-nav">
                     <a class="nav-itemlogo" href="{{ '/' | url }}"><img class="nav-logo" src="{{ '/static/images/logo.png' | url }}" alt="PGM Logo"></a>
                     <a class="nav-item" href="{{ '/opleiding/' | url }}">Opleiding</a>
+                    <a class="nav-item" href="{{ '/werkplekleren/' | url }}">Werkplekleren</a>
                     <a class="nav-item" href="{{ '/team/' | url }}">Team</a>
                     <a class="nav-item" href="{{ '/cases/' | url }}">Cases</a>
                     <a class="nav-item" href="{{ '/posts/' | url }}">Posts</a>
+                    <div class="social">
+                        <a href="https://www.facebook.com/GraduaatProgrammeren.Arteveldehogeschool" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.linkedin.com/company/graduaat-programmeren/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/madebypgm/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    </div>
                     <p class="copyright">Copyright © 2020 Graduaat Programmeren</p>
                 </div>
 </div>
