--- a/src/_pages/cases/cases.liquid
+++ b/src/_pages/cases/cases.liquid
@@ -1,10 +1,10 @@
 ---
 title: posts
 layout: page
-permalink: posts/posts/index.html
+permalink: cases/cases/index.html
 ---
 
 <div class="title__section">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
-    <div id="detailpage-posts"></div>
+    <div id="detailpage-cases"></div>
 </div>
