--- a/src/_sass/layout/_header.scss
+++ b/src/_sass/layout/_header.scss
@@ -14,6 +14,19 @@ body {
     padding: 2rem 0;
 }
 
+.desktop-nav {
+    display: flex;
+    .social {
+        margin-left: calc(var(--gutter)*4);
+        display: flex;
+    }
+    i {
+        font-size: 30px;
+        color: var(--color--whitish);
+        margin: 20px;
+    }
+}
+
 .navigation {
     padding: 0.5rem;
     height: 80px;
@@ -83,6 +96,9 @@ body {
         .nav_logo {
             margin-left: -13px;
         }
+        p {
+            margin: 20px;
+        }
     }
     .desktop-nav {
         display: none;
@@ -117,6 +133,17 @@ body {
 @media (max-width: 1200px) {
     .mobile-nav {
       display: none;
+    }
+    .social {
+        font-size: 40px;
+        margin: 10px;
+        margin-top: calc(var(--gutter)*3);
+        transform: none;
+        transition: none;
+    }
+
+    .slider_square_button {
+        transform: rotateX(90deg);
     }
     
   }
