--- a/src/_pages/werkplekleren.liquid
+++ b/src/_pages/werkplekleren.liquid
@@ -7,3 +7,7 @@ permalink: werkplekleren/index.html
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <h1 class="title__head">Werkplekleren</h1>
 </div>
+
+<div class="workspace__learning">
+
+</div>
