--- a/src/_sass/layout/_footer.scss
+++ b/src/_sass/layout/_footer.scss
@@ -96,7 +96,9 @@ footer {
 }
 
 @media only screen and(max-width: 1500px) {
-    .footer__title {
-        margin-left: calc(var(--gutter)*3);
+    footer {
+        p {
+            margin-left: calc(var(--gutter)*3);
+        }
     }
 }
