--- a/src/_pages/cases/cases.liquid
+++ b/src/_pages/cases/cases.liquid
@@ -8,3 +8,5 @@ permalink: cases/cases/index.html
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <div id="detailpage-cases"></div>
 </div>
+
+<script src="{{ '/static/js/detail-cases.js' | url }}"></script>
