--- a/src/_pages/home.liquid
+++ b/src/_pages/home.liquid
@@ -13,7 +13,8 @@ permalink: index.html
 <div class="posts__section">
     <div class="cases__square">
         <h2>Posts</h2>
-        <a class="more-info" href="{{ '/posts/' | url }}" data-navigo>Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
+        <a class="more-info" href="{{ '/posts/' | url }}" data-navigo>Meer info<i
+                class="fas fa-long-arrow-alt-right"></i></a>
     </div>
     <div class="slider">
         <div class="slidercontent">
@@ -44,46 +45,49 @@ permalink: index.html
             </div>
         </div>
     </div>
-    <div class="header-button">
-        <button class="header-button1" onclick="plusSlides(-1)">
-            <i class="fas fa-chevron-left"></i>
-        </button>
-        <button class="header-button2" onclick="plusSlides(1)">
-            <i class="fas fa-chevron-right"></i>
-        </button>
-    </div>
+    
     <div class="slider_square_button">
+    <div class="header-button__top">
+            <button class="header-button1" onclick="plusSlides(-1)">
+                <i class="fas fa-chevron-left rotate"></i>
+            </button>
+        </div>
         <button class="dot" onclick="currentSlide(1)"></button>
         <button class="dot" onclick="currentSlide(2)"></button>
         <button class="dot" onclick="currentSlide(3)"></button>
+        <div class="header-button__bottom">
+            <button class="header-button1" onclick="plusSlides(1)">
+                <i class="fas fa-chevron-right rotate"></i>
+            </button>
+        </div>
     </div>
 </div>
 
 <div class="m-technology__section">
 
-<span class="technology__item">
-Javascript
-</span>
+    <span class="technology__item">
+        Javascript
+    </span>
 
-<span class="technology__item">
-HTML5
-</span>
+    <span class="technology__item">
+        HTML5
+    </span>
 
-<span class="technology__item">
-CSS3
-</span>
+    <span class="technology__item">
+        CSS3
+    </span>
 
-<span class="technology__item">
-SASS
-</span>
+    <span class="technology__item">
+        SASS
+    </span>
 
-<span class="technology__item">
-GITHUB
-</span>
+    <span class="technology__item">
+        GITHUB
+    </span>
 
-<span class="technology__item">
+    <span class="technology__item">
 
-</span>
+    </span>
 
 </div>
 
@@ -93,7 +97,8 @@ GITHUB
             <h3>Waarom arteveldehogeschool?</h3>
         </div>
         <div class="a-info__text">
-            <p>Keuze uit ruim opleidingsaanbod, uitstekende begeleiding op maat en studeren in de grootste studentenstad van Vlaanderen.</p>
+            <p>Keuze uit ruim opleidingsaanbod, uitstekende begeleiding op maat en studeren in de grootste studentenstad
+                van Vlaanderen.</p>
             <div class="a-info__readmore">
                 <a href="https://pgm.gent/info">Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
@@ -104,16 +109,15 @@ GITHUB
             <h3>Ontdek je opleidingsprogramma</h3>
         </div>
         <div class="a-info__text">
-            <p>Hier vind je het volledige studieprogramma voor het Graduaat Programmeren - Front-end web development, met meer info over elk vak van deze opleiding.</p>
+            <p>Hier vind je het volledige studieprogramma voor het Graduaat Programmeren - Front-end web development,
+                met meer info over elk vak van deze opleiding.</p>
             <div class="a-info__readmore">
                 <a href="https://pgm.gent/info">Meer info<i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
         </div>
-        
+
     </div>
 
 </div>
 
 <script src="{{ '/static/js/slider.js' | url }}"></script>
-
-
