--- a/src/_pages/posts/posts.liquid
+++ b/src/_pages/posts/posts.liquid
@@ -8,3 +8,5 @@ permalink: posts/posts/index.html
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <div id="detailpage-posts"></div>
 </div>
+
+<script src="{{ '/static/js/detail-posts.js' | url }}"></script>
