--- a/src/_pages/home.liquid
+++ b/src/_pages/home.liquid
@@ -66,23 +66,35 @@ permalink: index.html
 <div class="m-technology__section">
 
     <span class="technology__item">
-        Javascript
+        <i class="fab fa-js-square"></i>
     </span>
 
     <span class="technology__item">
-        HTML5
+        <i class="fab fa-html5"></i>
     </span>
 
     <span class="technology__item">
-        CSS3
+        <i class="fab fa-css3-alt"></i>
     </span>
 
     <span class="technology__item">
-        SASS
+        <i class="fab fa-sass"></i>
     </span>
 
     <span class="technology__item">
-        GITHUB
+        <i class="fab fa-github-square"></i>
+    </span>
+
+    <span class="technology__item">
+        <i class="fab fa-npm"></i>
+    </span>
+
+    <span class="technology__item">
+        <i class="fab fa-adobe"></i>
+    </span>
+
+    <span class="technology__item">
+        <i class="fab fa-python"></i>
     </span>
 
     <span class="technology__item">
