--- a/src/_pages/posts/posts.liquid
+++ b/src/_pages/posts/posts.liquid
@@ -4,7 +4,7 @@ layout: page
 permalink: posts/posts/index.html
 ---
 
-<div class="title__section">
+<div class="title__section__detail">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <div id="detailpage-posts"></div>
 </div>
