--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -25,6 +25,7 @@
 @import 'pages/opleiding';
 @import 'pages/team';
 @import 'pages/cases';
+@import 'pages/detail';
 
 // themes
 @import 'themes/admin';
