--- a/src/_sass/pages/_team.scss
+++ b/src/_sass/pages/_team.scss
@@ -18,6 +18,11 @@
             position: absolute;
         }
 
+        .more-info {
+            font-family: 'Open Sans';
+            font-size: 20px;
+        }
+
         .o-student__image {
             border-radius: 500px;
             position: absolute;
