--- a/src/_pages/cases/cases.liquid
+++ b/src/_pages/cases/cases.liquid
@@ -4,7 +4,7 @@ layout: page
 permalink: cases/cases/index.html
 ---
 
-<div class="title__section">
+<div class="title__section__cases">
     <img class="main-image" src="{{ '/static/images/front-image.svg' | url }}" alt="">
     <div id="detailpage-cases"></div>
 </div>
