--- a/src/_pages/opleiding.liquid
+++ b/src/_pages/opleiding.liquid
@@ -28,7 +28,7 @@ permalink: opleiding/index.html
     <div class="container">
         <div class="filterDiv section0 opleidings__page">
         <h4>Introductie</h4>
-        <iframe width="750" height="543" src="https://www.youtube.com/embed/oZE6MQnM0cQ" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="yt-video" src="https://www.youtube.com/embed/oZE6MQnM0cQ" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="filterDiv section1 opleidings__page">
 
