--- a/src/_pages/werkplekleren.liquid
+++ b/src/_pages/werkplekleren.liquid
@@ -8,6 +8,11 @@ permalink: werkplekleren/index.html
     <h1 class="title__head">Werkplekleren</h1>
 </div>
 
+<div class="container">
 <div class="workspace__learning">
-
+    <h2>Formulier</h2>
+    <p>Op deze pagina kan je je via de form hieronder je aanmelden voor stages, jurylid, gastcolleges, workshops, stages of bedrijfsbezoeken.</p>
+    <p>Indien u geintresseerd bent , gelieve onderstaand formulier in te vullen en wij zullen contact met u opnemen.</p>
+    <iframe class="googleform" src="https://forms.office.com/Pages/ResponsePage.aspx?id=6oDgtrmteUyTA23Pgm-4VF-lTd6mzxNEgOsfGapckw1URFFLWEcwSDhBWjNCOUQ4UFVFNlRXSk42Sy4u" width="100%" height="1000px"></iframe>
+</div>
 </div>
