--- a/src/_sass/abstracts/_variables.scss
+++ b/src/_sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@
     --color--white: #fff;
     --color--whitish: #ECE8EF;
     --color--pinkish: #E43F6F;
+    --color--black: #000;
 
     // Spacers
     --spacer: 12px;
