--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -26,6 +26,7 @@
 @import 'pages/team';
 @import 'pages/cases';
 @import 'pages/detail';
+@import 'pages/werkplekleren';
 
 // themes
 @import 'themes/admin';
