--- a/src/_sass/pages/_home.scss
+++ b/src/_sass/pages/_home.scss
@@ -169,5 +169,11 @@
             }
         }
     }
+    .m-technology__section {
+        text-align: center;
+        .technology__item {
+            margin: 0px;
+        }
+    }
 }
 
