--- a/src/_sass/pages/_posts.scss
+++ b/src/_sass/pages/_posts.scss
@@ -60,6 +60,7 @@
     #posts {
         flex-direction: column;
         padding: 0;
-        margin: -13px;
+        margin: -20px;
+        width: 100%;
     }
 }
