--- a/src/_sass/pages/_detail.scss
+++ b/src/_sass/pages/_detail.scss
@@ -58,3 +58,114 @@
         font-size: 25px;
     }
 }
+
+.m-post {
+    color: var(--color--whitish);
+    margin-top: calc(var(--gutter)*2);
+    margin-bottom: calc(var(--gutter)*2);
+    .post__info__inner {
+        width: 300px;
+    }
+    .a-post__textcontainer__inner {
+        .a-post__title__inner {
+            font-size: 32px;
+            margin-top: var(--gutter);
+        }
+    }
+    .a-post__info {
+        display: flex;
+    }
+    .post__content {
+        margin-top: calc(var(--gutter)*5.8);
+        
+        p {
+            color: var(--color--black);
+            width: 60%;
+            font-size: 14px;
+        }
+        .title-text {
+            font-size: 20px;
+            font-style: italic;
+        }
+    }
+
+    .a-post__image {
+        width: 90%;
+    }
+}
+
+.title__section__cases {
+    height: 120vh;
+}
+
+.m-case {
+    text-align: left;
+    position: relative;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: calc(var(--gutter)*3);
+    .a-case__title {
+        color: var(--color--whitish);
+    }
+    .image__text {
+        display: flex;
+        width: 800px;
+        text-align: left;
+        color: var(--color--whitish);
+        margin: 0 auto;
+        position: absolute;
+        left: 0px;
+        p {
+            margin-left: var(--spacer);
+        }
+    }
+    .a-case__description {
+        margin-left: var(--spacer);
+        font-size: 18px;
+    }
+    .a-case__info {
+        margin-top: calc(var(--gutter)*22);
+    }
+}
+
+
+@media only screen and(max-width: 500px) {
+    body {
+        overflow-x: hidden;
+    }
+    .m-case {
+        width: 400px;
+        .image__text {
+            flex-direction: column;
+            width: 400px;
+            margin: 0;
+            picture {
+                width: 400px;
+                .a-case__image {
+                    width: 400px;
+                }
+            }
+        }
+        .a-case__description {
+            color: var(--color--black);
+            margin-left: -12px;
+            font-size: 12px;
+        }
+        .a-case__info {
+            margin-top: calc(var(--gutter)*22);
+        }
+    }
+    .a-post__info {
+        flex-direction: column;
+    }
+    .m-post {
+        .post__content {
+            width: 95%;
+            p {
+                width: 360px;
+            }
+        }
+    }
+ 
+    
+}
